--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,17 @@
-ktor_version=2.3.2
-kotlin_version=1.9.0
-logback_version=1.2.11
+#Gradle
+org.gradle.jvmargs=-Xmx3g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
+
+#Kotlin
 kotlin.code.style=official
+
+#Android
+android.useAndroidX=true
+android.nonTransitiveRClass=true
+
+#MPP
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.native.ignoreDisabledTargets=true
