--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -18,8 +18,8 @@ services:
         ports:
             - "9042:9042"  # Expose native binary CQL port for your apps
         volumes:
-            - ./data/cassandra1:/var/lib/cassandra    # This is the volume that will persist data for cass1 node
-            - ./etc/cassandra1:/etc/cassandra   # Use your own config files for full control
+            - ./cassandra/volumes/cassandra1/data:/var/lib/cassandra    # This is the volume that will persist data for cass1 node
+            - ./cassandra/volumes/cassandra1/etc:/etc/cassandra   # Use your own config files for full control
         environment: &environment    # Declare and save environments variables into "environment"
             CASSANDRA_SEEDS: "cassandra1,cassandra2"    # The first two nodes will be seeds
             CASSANDRA_CLUSTER_NAME: KLogger
@@ -42,11 +42,11 @@ services:
         ports:
             - "9043:9042"  # Expose native binary CQL port for your apps
         volumes:
-            - ./data/cassandra2:/var/lib/cassandra    # This is the volume that will persist data for cass2 node
-            - ./etc/cass2:/etc/cassandra    # Use your own config files for full control
+            - ./cassandra/volumes/cassandra2/data:/var/lib/cassandra    # This is the volume that will persist data for cass1 node
+            - ./cassandra/volumes/cassandra2/etc:/etc/cassandra   # Use your own config files for full control
         environment: *environment    # point to "environment" to use the same environment variables as cass1
         depends_on:
-            cass1: # start cass2 only after cass1 is healthy
+            cassandra1: # start cass2 only after cass1 is healthy
                 condition: service_healthy
 
     cassandra3:
@@ -63,9 +63,9 @@ services:
         ports:
             - "9044:9042"  # Expose native binary CQL port for your apps
         volumes:
-            - ./data/cassandra3:/var/lib/cassandra    # This is the volume that will persist data for cass3 node
-            - ./etc/cassandra3:/etc/cassandra    # Use your own config files for full control
+            - ./cassandra/volumes/cassandra3/data:/var/lib/cassandra    # This is the volume that will persist data for cass1 node
+            - ./cassandra/volumes/cassandra3/etc:/etc/cassandra   # Use your own config files for full control
         environment: *environment    # point to "environment" to use the same environment variables as cass1
         depends_on:
-            cass2: # start cass3 only after cass1 is healthy
+            cassandra2: # start cass3 only after cass1 is healthy
                 condition: service_healthy
