--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -23,8 +23,8 @@ services:
         environment: &environment    # Declare and save environments variables into "environment"
             CASSANDRA_SEEDS: "cassandra1,cassandra2"    # The first two nodes will be seeds
             CASSANDRA_CLUSTER_NAME: KLogger
-            CASSANDRA_DC: Default
-            CASSANDRA_RACK: Default
+            CASSANDRA_DC: Seed
+            CASSANDRA_RACK: Main
             CASSANDRA_ENDPOINT_SNITCH: GossipingPropertyFileSnitch
             CASSANDRA_NUM_TOKENS: 128
 
